tests/error/dtor_outside_class.gw
// [contains] dtor must be in class def!!
 dtor () {}
